--- a/code/frontend/src/page/User_Home/userHome.css
+++ b/code/frontend/src/page/User_Home/userHome.css
@@ -5,7 +5,20 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: lightblue;
+    /* background-color: lightblue; */
+  }
+
+  .container::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 150%;
+    background-image: url('../../images/workplan.jpg');
+    background-size: cover; 
+    filter: blur(3px); 
+    z-index: -1; 
   }
   
   .text {
@@ -13,4 +26,10 @@
     color: darkblue;
   }
 
-  
+  .modal {
+    background-color: white;
+    border-radius: 10px; 
+    border: 2px solid #ccc;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    padding: 20px; 
+  }
