--- a/code/frontend/src/page/User_Home/userHome.css
+++ b/code/frontend/src/page/User_Home/userHome.css
@@ -14,10 +14,10 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 150%;
-    background-image: url('../../images/workplan.jpg');
+    height: 100%;
+    background-image: url('../../images/back1.jpg');
     background-size: cover; 
-    filter: blur(3px); 
+    filter: blur(4px); 
     z-index: -1; 
   }
   
@@ -32,4 +32,14 @@
     border: 2px solid #ccc;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
     padding: 20px; 
+  }
+
+  .modal-content1 {
+    background-color: rgb(180, 199, 207);
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    border: 8px solid #2b0561;
+
   }
